# chatgpt_register_web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  balance_web.py  chatgpt_register.py  config.example.json  config.json  config_runtime.py  pyproject.toml  register.py  requirements.txt  restart.py  web_app.py  查余额.html
.github/workflows/: deploy.yml
qweather_mailer/: .env.example  README.md  deploy_remote.sh  requirements.txt  weather_mailer.py
ref/: config.json
scripts/: deploy_balance_remote.sh  deploy_remote.sh
templates/: index.html
