[project]
name = "chatgpt-register"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "curl-cffi>=0.7.0",
    "python-multipart>=0.0.9",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
